fixed navbar links to sections, fixed login/register pages content hiding behind nav

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -336,3 +336,8 @@ footer div div ul li i {
         margin-left: 10px;
         margin-right: 10px;
     }
+    
+    
+    .form-main {
+        margin-top: 10rem;
+    }
